# fpm

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.fpm/: config.yaml
.github/workflows/: formatting.yml  rustfmt.yml  tests.yml
fpm/: Cargo.toml  build_systems.rs  config.rs  db.rs  flatpak_manifest.rs  fpm.yml  lib.rs  logger.rs  main.rs  projects.rs  utils.rs
fpm-tools/: Cargo.toml  hubs.rs
fpm-tools/hubs/: brew.rs  deb.rs  github.rs  gitlab.rs
scripts/: publish.sh
src/: build_systems.rs  config.rs  db.rs  flatpak_manifest.rs  fpm.yml  lib.rs  main.rs  utils.rs  vcpkg_manifest.rs  version.rs
src/importers/: cargo.rs  goget.rs  mod.rs
