[package]
name = "fpm"
authors = ["louib <code@louib.net>"]

repository = "https://github.com/louib/fpm/"
description = "CLI tool for managing Flatpak manifests and workspaces."

keywords = [
  "flatpak",
  "manifest",
  "modules",
  "workspace",
]

license = "MIT"
readme = "README.md"

version = "0.0.3"
edition = "2018"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3", features = ["yaml", "derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.4"
toml = "0.5"

flatpak-rs = "0.12"
fpm-core = "0.4"

log = "0.4"

lazy_static = "1.4"
