[package]
name = "fpm-tools"
version = "0.0.1"
authors = ["louib <code@louib.net>"]
edition = "2018"
description = "fpm tools."
license = "MIT"
repository = "https://github.com/louib/fpm/"
readme = "README.md"
keywords = [
  "flatpak",
  "linux",
  "modules",
]

[[bin]]
name = "fpm-discover-manifests"
path = "bin/fpm-discover-manifests.rs"

[[bin]]
name = "fpm-discovery-stats"
path = "bin/fpm-discovery-stats.rs"

[[bin]]
name = "fpm-manifests-stats"
path = "bin/fpm-manifests-stats.rs"

[[bin]]
name = "fpm-extract-urls-from-manifests"
path = "bin/fpm-extract-urls-from-manifests.rs"

[[bin]]
name = "fpm-map-archives-to-repos"
path = "bin/fpm-map-archives-to-repos.rs"

[lib]
path = "lib.rs"

[dependencies]
fpm = { path = "../fpm" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# toml is used with serde as well.
toml = "0.5"

log = "0.4"
simple-logging = "2.0.2"

lazy_static = "1.4.0"

# HTTP related dependencies.
reqwest = { version = "0.11", features = ["cookies", "blocking", "json"] }
tokio = { version = "1.1.1", features = ["full"] }
futures = "0.3"
